// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`big file pack 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
    },
  ],
}
`;

exports[`createDesktopShortcut always 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "Test App ßW Setup 1.1.0.exe.blockmap",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`custom exec name 1`] = `
Object {
  "APP_32_NAME": undefined,
  "APP_64_NAME": "TestApp-1.1.0-x64.nsis.7z",
  "APP_ARM64_NAME": undefined,
  "APP_FILENAME": "TestApp",
  "APP_ID": "org.electron-builder.testApp",
  "APP_PACKAGE_NAME": "TestApp",
  "APP_PRODUCT_FILENAME": "Boo",
  "COMPANY_NAME": "Foo Bar",
  "ONE_CLICK": null,
  "PRODUCT_FILENAME": "Boo",
  "PRODUCT_NAME": "foo",
  "SHORTCUT_NAME": "foo",
  "UNINSTALL_DISPLAY_NAME": "foo 1.1.0",
}
`;

exports[`custom exec name 2`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "foo Setup 1.1.0.exe",
      "safeArtifactName": "foo-Setup-1.1.0.exe",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "foo Setup 1.1.0.exe.blockmap",
      "safeArtifactName": "foo-Setup-1.1.0.exe.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`custom guid 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "ia32",
      "file": "boo Hub Setup 1.1.0.exe",
      "safeArtifactName": "boo-Hub-Setup-1.1.0.exe",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "boo Hub Setup 1.1.0.exe.blockmap",
      "safeArtifactName": "boo-Hub-Setup-1.1.0.exe.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`custom include 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "Test App ßW Setup 1.1.0.exe.blockmap",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`custom script 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "Test App ßW Setup 1.1.0.exe.blockmap",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`file associations per user 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "ia32",
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "Test App ßW Setup 1.1.0.exe.blockmap",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`html license 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "Test App ßW Setup 1.1.0.exe.blockmap",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`installerHeaderIcon 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "Test App ßW Setup 1.1.0.exe.blockmap",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`menuCategory 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "ia32",
      "file": "Test Menu Category CustomName 1.1.0.exe",
      "safeArtifactName": "Test-Menu-Category-CustomName-1.1.0.exe",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "Test Menu Category CustomName 1.1.0.exe.blockmap",
      "safeArtifactName": "Test-Menu-Category-CustomName-1.1.0.exe.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`multi language license 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "Test App ßW Setup 1.1.0.exe.blockmap",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`one-click 1`] = `
Object {
  "win": Array [
    Object {
      "file": "1.1.0_latest.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW Setup 1.1.0.exe",
          },
        ],
        "path": "Test App ßW Setup 1.1.0.exe",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "Test App ßW Setup 1.1.0.exe.blockmap",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`one-click 2`] = `
Object {
  "owner": "actperepo",
  "package": "TestApp",
  "provider": "bintray",
  "updaterCacheDirName": "testapp-updater",
}
`;

exports[`perMachine, no run after finish 1`] = `
Object {
  "win": Array [
    Object {
      "file": "latest.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "isAdminRightsRequired": true,
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp Setup 1.1.0.exe",
          },
        ],
        "path": "TestApp Setup 1.1.0.exe",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "arch": "ia32",
      "file": "TestApp Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
      "updateInfo": Object {
        "isAdminRightsRequired": true,
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "TestApp Setup 1.1.0.exe.blockmap",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe.blockmap",
      "updateInfo": Object {
        "isAdminRightsRequired": true,
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`perMachine, no run after finish 2`] = `
Object {
  "provider": "generic",
  "updaterCacheDirName": "testapp-updater",
  "url": "https://develar.s3.amazonaws.com/test/win/ia32",
}
`;

exports[`string menuCategory 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "ia32",
      "file": "Test Menu Category ' CustomName 1.1.0.exe",
      "safeArtifactName": "test-menu-category-setup-1.1.0.exe",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "Test Menu Category ' CustomName 1.1.0.exe.blockmap",
      "safeArtifactName": "test-menu-category-setup-1.1.0.exe.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;
